# ChangeLog for dev-util/bzrtools
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/bzrtools/ChangeLog,v 1.31 2008/05/10 09:25:10 hawking Exp $

*bzrtools-1.4.0 (10 May 2008)

  10 May 2008; Ali Polatel <hawking@gentoo.org> +bzrtools-1.4.0.ebuild:
  Version bump.

  21 Mar 2008; Ali Polatel <hawking@gentoo.org> metadata.xml:
  Added myself as maintainer.

*bzrtools-1.3.0 (20 Mar 2008)

  20 Mar 2008; Ali Polatel <hawking@gentoo.org> +bzrtools-1.3.0.ebuild:
  Version bump.

  12 Mar 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing Marien Zwart (marienz, #107204) from metadata.xml.

*bzrtools-1.1.0 (15 Jan 2008)

  15 Jan 2008; Lukasz Strzygowski <lucass@gentoo.org>
  -bzrtools-0.92.1.ebuild, -bzrtools-1.0.0.ebuild, +bzrtools-1.1.0.ebuild:
  Version bump (bug #205914). Dropped old versions.

*bzrtools-1.0.0 (14 Dec 2007)

  14 Dec 2007; Ali Polatel <hawking@gentoo.org> +bzrtools-1.0.0.ebuild:
  Version bump.

*bzrtools-0.92.1 (14 Nov 2007)

  14 Nov 2007; Lukasz Strzygowski <lucass@gentoo.org>
  -bzrtools-0.16.1.ebuild, -bzrtools-0.90.0.ebuild, -bzrtools-0.91.0.ebuild,
  +bzrtools-0.92.1.ebuild:
  Version bump (bug #199112): cleanup. Dropped old versions.

*bzrtools-0.91.0 (26 Sep 2007)

  26 Sep 2007; Ali Polatel <hawking@gentoo.org> +bzrtools-0.91.0.ebuild:
  version bump.

*bzrtools-0.90.0 (06 Sep 2007)

  06 Sep 2007; Ali Polatel <hawking@gentoo.org> +bzrtools-0.90.0.ebuild:
  Version bump.

*bzrtools-0.17.1 (22 Jun 2007)

  22 Jun 2007; Marien Zwart <marienz@gentoo.org> -bzrtools-0.15.4.ebuild,
  +bzrtools-0.17.1.ebuild:
  Version bump.

*bzrtools-0.16.1 (11 May 2007)

  11 May 2007; Marien Zwart <marienz@gentoo.org> -bzrtools-0.14.0.ebuild,
  +bzrtools-0.16.1.ebuild:
  Version bump.

*bzrtools-0.15.4 (02 Apr 2007)

  02 Apr 2007; Marien Zwart <marienz@gentoo.org> -bzrtools-0.13.0.ebuild,
  +bzrtools-0.15.4.ebuild:
  Version bump.

*bzrtools-0.14.0 (26 Jan 2007)
